fix: ios issue withs stretch images

--- a/src/components/molecules/gold-leaf/gold-leaf.scss
+++ b/src/components/molecules/gold-leaf/gold-leaf.scss
@@ -1,21 +1,14 @@
 @import "../../styles.scss";
 
-.Branch {
+.GoldLeaf {
   display: block;
   max-width: 300px;
   margin: 8px;
+  background: transparent;
+  height: auto;
 }
   
-.Branch h2 {
-  font-family: "Roboto", Arial, Helvetica, sans-serif;
-  font-size: 26px;
-  padding: 0px;
-  margin: 0px;
-  margin-bottom: 10px;
-  font-weight: 700;
-  opacity: 0.7;
-}
-.Branch__controls {
+.GoldLeaf__controls {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   grid-gap: 5px;
@@ -24,7 +17,7 @@
   padding: 5px;
   opacity: 0.4;
 }
-.Branch__item {
+.GoldLeaf__item {
   display: block;
   position: relative;
   background: transparent;
@@ -33,25 +26,25 @@
   pointer-events: all;
   cursor: pointer;
 }
-.Branch p {
+.GoldLeaf p {
   font-size: 18px;
   padding: 10px;
 }
-.Branch a {
+.GoldLeaf a {
   text-decoration: none;
   color: #887f7f;
 }
-.Branch a:visited {
+.GoldLeaf a:visited {
   text-decoration: none;
   color: #d0b002;
 }
-.Branch__images {
+.GoldLeaf__images {
   display: flex;
   flex-direction: column;
   overflow: hidden;
   overflow-x: auto;
 }
-.Branch__total {
+.GoldLeaf__total {
   display: block;
   position: absolute;
   top: 0px;
@@ -60,7 +53,7 @@
   border-radius: 4px;
   padding: 0px 2px;
 }
-.Branch__total__text {
+.GoldLeaf__total__text {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -68,7 +61,7 @@
   font-size: 12px;
   opacity: 0.6;
 }
-.Branch__image {
+.GoldLeaf__image {
   display: flex;
   flex-direction: row;
   overflow: hidden;
@@ -76,20 +69,23 @@
   width: 100%;
   height: auto;
   align-items: flex-start;
+  padding: 0px;
 }
 
-.Branch__image img {
+.GoldLeaf__image img {
   width: 100%;
   height: auto;
 }
 
-.Branch__title {
+.GoldLeaf__title {
   font-family: $font-roboto-slab;
-  font-size: 20px;
+  font-size: 26px;
   color: #888;
-  //width: 96vw
+  opacity: 0.7;
+  line-height: 24px;
+  margin-bottom: 8px;
 }
-.Branch__titleLink {
+.GoldLeaf__titleLink {
   text-decoration: none;
   pointer-events: all;
   font-family: $font-roboto-slab;
